@@ -18,17 +18,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class heif_error {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("code"),
-        Constants$root.C_INT$LAYOUT.withName("subcode"),
-        Constants$root.C_POINTER$LAYOUT.withName("message")
-    ).withName("heif_error");
     public static MemoryLayout $LAYOUT() {
-        return heif_error.$struct$LAYOUT;
+        return constants$1.const$1;
     }
-    static final VarHandle code$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("code"));
     public static VarHandle code$VH() {
-        return heif_error.code$VH;
+        return constants$1.const$2;
     }
     /**
      * Getter for field:
@@ -37,7 +31,7 @@ public class heif_error {
      * }
      */
     public static int code$get(MemorySegment seg) {
-        return (int)heif_error.code$VH.get(seg);
+        return (int)constants$1.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -46,17 +40,16 @@ public class heif_error {
      * }
      */
     public static void code$set(MemorySegment seg, int x) {
-        heif_error.code$VH.set(seg, x);
+        constants$1.const$2.set(seg, x);
     }
     public static int code$get(MemorySegment seg, long index) {
-        return (int)heif_error.code$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$1.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void code$set(MemorySegment seg, long index, int x) {
-        heif_error.code$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle subcode$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("subcode"));
     public static VarHandle subcode$VH() {
-        return heif_error.subcode$VH;
+        return constants$1.const$3;
     }
     /**
      * Getter for field:
@@ -65,7 +58,7 @@ public class heif_error {
      * }
      */
     public static int subcode$get(MemorySegment seg) {
-        return (int)heif_error.subcode$VH.get(seg);
+        return (int)constants$1.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -74,17 +67,16 @@ public class heif_error {
      * }
      */
     public static void subcode$set(MemorySegment seg, int x) {
-        heif_error.subcode$VH.set(seg, x);
+        constants$1.const$3.set(seg, x);
     }
     public static int subcode$get(MemorySegment seg, long index) {
-        return (int)heif_error.subcode$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$1.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void subcode$set(MemorySegment seg, long index, int x) {
-        heif_error.subcode$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle message$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("message"));
     public static VarHandle message$VH() {
-        return heif_error.message$VH;
+        return constants$1.const$4;
     }
     /**
      * Getter for field:
@@ -93,7 +85,7 @@ public class heif_error {
      * }
      */
     public static MemorySegment message$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)heif_error.message$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$1.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -102,20 +94,20 @@ public class heif_error {
      * }
      */
     public static void message$set(MemorySegment seg, MemorySegment x) {
-        heif_error.message$VH.set(seg, x);
+        constants$1.const$4.set(seg, x);
     }
     public static MemorySegment message$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)heif_error.message$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$1.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void message$set(MemorySegment seg, long index, MemorySegment x) {
-        heif_error.message$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$1.const$4.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
