@@ -12,7 +12,7 @@ import static java.lang.foreign.ValueLayout.*;
  * struct heif_reader {
  *     int reader_api_version;
  *     long long (*get_position)(void*);
- *     int (*read)(void*,unsigned long,void*);
+ *     int (*read)(void*,unsigned long long,void*);
  *     int (*seek)(long long,void*);
  *     enum heif_reader_grow_status (*wait_for_file_size)(long long,void*);
  * };
@@ -20,20 +20,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class heif_reader {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_INT$LAYOUT.withName("reader_api_version"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("get_position"),
-        Constants$root.C_POINTER$LAYOUT.withName("read"),
-        Constants$root.C_POINTER$LAYOUT.withName("seek"),
-        Constants$root.C_POINTER$LAYOUT.withName("wait_for_file_size")
-    ).withName("heif_reader");
     public static MemoryLayout $LAYOUT() {
-        return heif_reader.$struct$LAYOUT;
+        return constants$4.const$4;
     }
-    static final VarHandle reader_api_version$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("reader_api_version"));
     public static VarHandle reader_api_version$VH() {
-        return heif_reader.reader_api_version$VH;
+        return constants$4.const$5;
     }
     /**
      * Getter for field:
@@ -42,7 +33,7 @@ public class heif_reader {
      * }
      */
     public static int reader_api_version$get(MemorySegment seg) {
-        return (int)heif_reader.reader_api_version$VH.get(seg);
+        return (int)constants$4.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -51,27 +42,14 @@ public class heif_reader {
      * }
      */
     public static void reader_api_version$set(MemorySegment seg, int x) {
-        heif_reader.reader_api_version$VH.set(seg, x);
+        constants$4.const$5.set(seg, x);
     }
     public static int reader_api_version$get(MemorySegment seg, long index) {
-        return (int)heif_reader.reader_api_version$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$4.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void reader_api_version$set(MemorySegment seg, long index, int x) {
-        heif_reader.reader_api_version$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$4.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final FunctionDescriptor get_position$FUNC = FunctionDescriptor.of(Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor get_position_UP$FUNC = FunctionDescriptor.of(Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle get_position_UP$MH = RuntimeHelper.upcallHandle(get_position.class, "apply", heif_reader.get_position_UP$FUNC);
-    static final FunctionDescriptor get_position_DOWN$FUNC = FunctionDescriptor.of(Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle get_position_DOWN$MH = RuntimeHelper.downcallHandle(
-        heif_reader.get_position_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * long long (*get_position)(void*);
@@ -80,14 +58,14 @@ public class heif_reader {
     public interface get_position {
 
         long apply(java.lang.foreign.MemorySegment _x0);
-        static MemorySegment allocate(get_position fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(heif_reader.get_position_UP$MH, fi, heif_reader.get_position$FUNC, scope);
+        static MemorySegment allocate(get_position fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$5.const$1, fi, constants$5.const$0, scope);
         }
-        static get_position ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static get_position ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0) -> {
                 try {
-                    return (long)heif_reader.get_position_DOWN$MH.invokeExact(symbol, __x0);
+                    return (long)constants$5.const$2.invokeExact(symbol, __x0);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -95,9 +73,8 @@ public class heif_reader {
         }
     }
 
-    static final VarHandle get_position$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("get_position"));
     public static VarHandle get_position$VH() {
-        return heif_reader.get_position$VH;
+        return constants$5.const$3;
     }
     /**
      * Getter for field:
@@ -106,7 +83,7 @@ public class heif_reader {
      * }
      */
     public static MemorySegment get_position$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)heif_reader.get_position$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$5.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -115,52 +92,33 @@ public class heif_reader {
      * }
      */
     public static void get_position$set(MemorySegment seg, MemorySegment x) {
-        heif_reader.get_position$VH.set(seg, x);
+        constants$5.const$3.set(seg, x);
     }
     public static MemorySegment get_position$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)heif_reader.get_position$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$5.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void get_position$set(MemorySegment seg, long index, MemorySegment x) {
-        heif_reader.get_position$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$5.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    public static get_position get_position(MemorySegment segment, SegmentScope scope) {
+    public static get_position get_position(MemorySegment segment, Arena scope) {
         return get_position.ofAddress(get_position$get(segment), scope);
     }
-    static final FunctionDescriptor read$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor read_UP$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle read_UP$MH = RuntimeHelper.upcallHandle(read.class, "apply", heif_reader.read_UP$FUNC);
-    static final FunctionDescriptor read_DOWN$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle read_DOWN$MH = RuntimeHelper.downcallHandle(
-        heif_reader.read_DOWN$FUNC
-    );
     /**
      * {@snippet :
- * int (*read)(void*,unsigned long,void*);
+ * int (*read)(void*,unsigned long long,void*);
      * }
      */
     public interface read {
 
         int apply(java.lang.foreign.MemorySegment _x0, long _x1, java.lang.foreign.MemorySegment _x2);
-        static MemorySegment allocate(read fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(heif_reader.read_UP$MH, fi, heif_reader.read$FUNC, scope);
+        static MemorySegment allocate(read fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$5.const$5, fi, constants$5.const$4, scope);
         }
-        static read ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static read ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (java.lang.foreign.MemorySegment __x0, long __x1, java.lang.foreign.MemorySegment __x2) -> {
                 try {
-                    return (int)heif_reader.read_DOWN$MH.invokeExact(symbol, __x0, __x1, __x2);
+                    return (int)constants$6.const$0.invokeExact(symbol, __x0, __x1, __x2);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -168,53 +126,36 @@ public class heif_reader {
         }
     }
 
-    static final VarHandle read$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("read"));
     public static VarHandle read$VH() {
-        return heif_reader.read$VH;
+        return constants$6.const$1;
     }
     /**
      * Getter for field:
      * {@snippet :
-     * int (*read)(void*,unsigned long,void*);
+     * int (*read)(void*,unsigned long long,void*);
      * }
      */
     public static MemorySegment read$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)heif_reader.read$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$6.const$1.get(seg);
     }
     /**
      * Setter for field:
      * {@snippet :
-     * int (*read)(void*,unsigned long,void*);
+     * int (*read)(void*,unsigned long long,void*);
      * }
      */
     public static void read$set(MemorySegment seg, MemorySegment x) {
-        heif_reader.read$VH.set(seg, x);
+        constants$6.const$1.set(seg, x);
     }
     public static MemorySegment read$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)heif_reader.read$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$6.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void read$set(MemorySegment seg, long index, MemorySegment x) {
-        heif_reader.read$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$6.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    public static read read(MemorySegment segment, SegmentScope scope) {
+    public static read read(MemorySegment segment, Arena scope) {
         return read.ofAddress(read$get(segment), scope);
     }
-    static final FunctionDescriptor seek$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor seek_UP$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle seek_UP$MH = RuntimeHelper.upcallHandle(seek.class, "apply", heif_reader.seek_UP$FUNC);
-    static final FunctionDescriptor seek_DOWN$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle seek_DOWN$MH = RuntimeHelper.downcallHandle(
-        heif_reader.seek_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * int (*seek)(long long,void*);
@@ -223,14 +164,14 @@ public class heif_reader {
     public interface seek {
 
         int apply(long _x0, java.lang.foreign.MemorySegment _x1);
-        static MemorySegment allocate(seek fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(heif_reader.seek_UP$MH, fi, heif_reader.seek$FUNC, scope);
+        static MemorySegment allocate(seek fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$6.const$3, fi, constants$6.const$2, scope);
         }
-        static seek ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static seek ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (long __x0, java.lang.foreign.MemorySegment __x1) -> {
                 try {
-                    return (int)heif_reader.seek_DOWN$MH.invokeExact(symbol, __x0, __x1);
+                    return (int)constants$6.const$4.invokeExact(symbol, __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -238,9 +179,8 @@ public class heif_reader {
         }
     }
 
-    static final VarHandle seek$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("seek"));
     public static VarHandle seek$VH() {
-        return heif_reader.seek$VH;
+        return constants$6.const$5;
     }
     /**
      * Getter for field:
@@ -249,7 +189,7 @@ public class heif_reader {
      * }
      */
     public static MemorySegment seek$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)heif_reader.seek$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$6.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -258,33 +198,17 @@ public class heif_reader {
      * }
      */
     public static void seek$set(MemorySegment seg, MemorySegment x) {
-        heif_reader.seek$VH.set(seg, x);
+        constants$6.const$5.set(seg, x);
     }
     public static MemorySegment seek$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)heif_reader.seek$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$6.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void seek$set(MemorySegment seg, long index, MemorySegment x) {
-        heif_reader.seek$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$6.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    public static seek seek(MemorySegment segment, SegmentScope scope) {
+    public static seek seek(MemorySegment segment, Arena scope) {
         return seek.ofAddress(seek$get(segment), scope);
     }
-    static final FunctionDescriptor wait_for_file_size$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final FunctionDescriptor wait_for_file_size_UP$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle wait_for_file_size_UP$MH = RuntimeHelper.upcallHandle(wait_for_file_size.class, "apply", heif_reader.wait_for_file_size_UP$FUNC);
-    static final FunctionDescriptor wait_for_file_size_DOWN$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
-        Constants$root.C_LONG_LONG$LAYOUT,
-        Constants$root.C_POINTER$LAYOUT
-    );
-    static final MethodHandle wait_for_file_size_DOWN$MH = RuntimeHelper.downcallHandle(
-        heif_reader.wait_for_file_size_DOWN$FUNC
-    );
     /**
      * {@snippet :
  * enum heif_reader_grow_status (*wait_for_file_size)(long long,void*);
@@ -293,14 +217,14 @@ public class heif_reader {
     public interface wait_for_file_size {
 
         int apply(long _x0, java.lang.foreign.MemorySegment _x1);
-        static MemorySegment allocate(wait_for_file_size fi, SegmentScope scope) {
-            return RuntimeHelper.upcallStub(heif_reader.wait_for_file_size_UP$MH, fi, heif_reader.wait_for_file_size$FUNC, scope);
+        static MemorySegment allocate(wait_for_file_size fi, Arena scope) {
+            return RuntimeHelper.upcallStub(constants$7.const$0, fi, constants$6.const$2, scope);
         }
-        static wait_for_file_size ofAddress(MemorySegment addr, SegmentScope scope) {
-            MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+        static wait_for_file_size ofAddress(MemorySegment addr, Arena arena) {
+            MemorySegment symbol = addr.reinterpret(arena, null);
             return (long __x0, java.lang.foreign.MemorySegment __x1) -> {
                 try {
-                    return (int)heif_reader.wait_for_file_size_DOWN$MH.invokeExact(symbol, __x0, __x1);
+                    return (int)constants$6.const$4.invokeExact(symbol, __x0, __x1);
                 } catch (Throwable ex$) {
                     throw new AssertionError("should not reach here", ex$);
                 }
@@ -308,9 +232,8 @@ public class heif_reader {
         }
     }
 
-    static final VarHandle wait_for_file_size$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("wait_for_file_size"));
     public static VarHandle wait_for_file_size$VH() {
-        return heif_reader.wait_for_file_size$VH;
+        return constants$7.const$1;
     }
     /**
      * Getter for field:
@@ -319,7 +242,7 @@ public class heif_reader {
      * }
      */
     public static MemorySegment wait_for_file_size$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)heif_reader.wait_for_file_size$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$7.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -328,15 +251,15 @@ public class heif_reader {
      * }
      */
     public static void wait_for_file_size$set(MemorySegment seg, MemorySegment x) {
-        heif_reader.wait_for_file_size$VH.set(seg, x);
+        constants$7.const$1.set(seg, x);
     }
     public static MemorySegment wait_for_file_size$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)heif_reader.wait_for_file_size$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$7.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void wait_for_file_size$set(MemorySegment seg, long index, MemorySegment x) {
-        heif_reader.wait_for_file_size$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$7.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    public static wait_for_file_size wait_for_file_size(MemorySegment segment, SegmentScope scope) {
+    public static wait_for_file_size wait_for_file_size(MemorySegment segment, Arena scope) {
         return wait_for_file_size.ofAddress(wait_for_file_size$get(segment), scope);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
@@ -344,7 +267,7 @@ public class heif_reader {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
